Closed Bug 120916 Opened 24 years ago Closed 24 years ago

PostScript/Xprint module revamp

Categories

(Core :: Printing: Output, defect, P2)

All
Linux
defect

Tracking

()

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: roland.mainz, Assigned: roland.mainz)

References

Details

Attachments

(8 obsolete files)

Currently I am working on a combined patch (print modules are small pieces of code, creating single patches may end-up in many bitrot problems and/or patch dependicies) for the following bugs: - bug 116139 ("Replace UnixPrData with nsIPrintSettings") - bug 116140 ("Remove deprecated paperSize from the Unix printing code") - bug 120223 ("Xprint module does not use the given papersize/copies attributes") ... and many other issues we do not have bugs for...
Blocks: 116139, 116140, 120223
Status: NEW → ASSIGNED
Depends on: 120221
Priority: -- → P2
Target Milestone: --- → mozilla0.9.9
Attached patch Patch for 2002-01-17-08-trunk (obsolete) — Splinter Review
Attachment #65760 - Attachment is obsolete: true
Note that I've sync'ed nsDeviceContextSpecXlib and nsDeviceContextSpecGTK - they are identical except they use different class names. ---- Requesting r=/sr= ... ... rods ?
Keywords: patch, review
nice cleanup r=rods
Requesting sr= ...
Note that you need the patch from bug 120221 to get this one working...
Blocks: 39825
Updated patch to get rid of bitrot and added a fix for bug 122494 ("Xprint has problems parsing paper size enumerations with tray names") ...
Attachment #65782 - Attachment is obsolete: true
Blocks: 121847
New patch for 2002-02-02-08-trunk to get rid of bitrot + I added a fix for bug 121847 ("PostScript module should add Mozilla version/buildid to print job") ...
Attachment #67049 - Attachment is obsolete: true
Blocks: 123270
Blocks: 122494
r=rods
r=dcone
Blocks: 80625
Comment on attachment 67654 [details] [diff] [review] New patch for 2002-02-02-08-trunk I have a new patch in the queue to update the XprintUtil library code with my tree and adjust the patch with the newest NSPR improvements... new patch in a few hours...
Attachment #67654 - Flags: needs-work+
Attached patch (Hopefully) final patch (obsolete) — Splinter Review
Patch for 2002-02-05-08-trunk Changes: - XprintUtil API changes - Fixed "double assertions" in Xprint module (zeo-width/height images usually have zero image resolution, no need to harass developers twice for the same issue... :) - Build warning cleanup (mainly in gfx/src/ps/)
Attachment #67654 - Attachment is obsolete: true
Attached patch Another patch cycle... (obsolete) — Splinter Review
Attachment #68582 - Attachment is obsolete: true
r=rods
Comment on attachment 68990 [details] [diff] [review] Another patch cycle... rs=attinasi Some of the naming conventions are wrong though, arguments should start with 'a'.
Attachment #68990 - Flags: superreview+
Comment on attachment 68990 [details] [diff] [review] Another patch cycle... Checked in asis These appear to be the functions which attinasi wants fixed +NS_IMETHODIMP nsDeviceContextSpecGTK::GetLandscape(PRBool &landscape) +NS_IMETHODIMP nsDeviceContextSpecGTK::GetTopMargin(float &value) +NS_IMETHODIMP nsDeviceContextSpecGTK::GetBottomMargin(float &value) +NS_IMETHODIMP nsDeviceContextSpecGTK::GetRightMargin(float &value) +NS_IMETHODIMP nsDeviceContextSpecGTK::GetLeftMargin(float &value) gisburn can make a new patch for that.
Attachment #68990 - Attachment is obsolete: true
Attached patch Patch to fix BeOS bustage (obsolete) — Splinter Review
Comment on attachment 69111 [details] [diff] [review] Patch to fix BeOS bustage Applied, still watching
Attachment #69111 - Attachment is obsolete: true
Comment on attachment 69122 [details] [diff] [review] Patch to fix the typos in main patch (as requested by attinasi) committed r=timeless
Attachment #69122 - Attachment is obsolete: true
BeOS tinderbox "BeWildered" went GREEN after checkin of attachment 69111 [details] [diff] [review], marking bug as FIXED.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
This checkin (further) broke AIX.
Filed bug 125341 for the AIX(-only) bustage...
Roland, please verify...thanks!
QA Contact: sujay → Roland.Mainz
Broke OpenVMS build too. See bug 125587 for details.
Blocks: 120225
Marking bug as VERIFIED, everything works as expected, all regressions have been fixed... :-)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: