Bug 120916 PostScript/Xprint module revamp BeOS const fix for Bewildered tinderbox